--- a/Resources/views/translations_filter.html.twig
+++ b/Resources/views/translations_filter.html.twig
@@ -19,6 +19,15 @@
                         {% endfor %}
                     </div>
                 </div>
+                <div class="form-inline">
+                    <div class="col-sm-2 text-right">{{ 'label.filter_status'|trans }}</div>
+                    <div class="col-sm-10">
+                        {{ form_row(form_filter.changed) }}
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        {{ form_row(form_filter.conflicts) }}
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4 col-md-3 text-right">
                 <button type="submit" class="btn btn-info">
