--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -2,6 +2,24 @@
 
 {% trans_default_domain "ManuelTranslationBundle" %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .code-text {
+            white-space: pre; /* CSS 2.0 */
+            white-space: pre-wrap; /* CSS 2.1 */
+            white-space: pre-line; /* CSS 3.0 */
+            white-space: -pre-wrap; /* Opera 4-6 */
+            white-space: -o-pre-wrap; /* Opera 7 */
+            white-space: -moz-pre-wrap; /* Mozilla */
+            white-space: -hp-pre-wrap; /* HP Printers */
+            word-wrap: break-word; /* IE 5+ */
+        }
+
+        pre { white-space: pre-wrap; }
+    </style>
+{% endblock %}
+
 {% block page_header %}{{ 'label.translation_list'|trans }}{% endblock %}
 
 {% block page_header_rigth %}
@@ -38,25 +56,33 @@
     </div>
 {% endblock %}
 
+{% set pagination_content %}
+<div class="text-right">
+    {{ knp_pagination_render(translations) }}
+</div>
+{% endset %}
+
 {% block content %}
 
     {{ include('@ManuelTranslation/translations_filter.html.twig') }}
+    {{ pagination_content }}
 
     <table class="table table-striped table-bordered table-hover translation-list">
         <thead>
             <tr>
-                <th>{{ 'label.domain'|trans }}</th>
-                <th>{{ 'label.code'|trans }}</th>
-                {% for locale in locales %}
-                    <th>{{ locale }}</th>
-                {% endfor %}
-                <th class="col-sm-1">{{ 'label.actions'|trans }}</th>
+                <th class="col-sm-1">{{ 'label.domain'|trans }}</th>
+                <th class="col-sm-3">{{ 'label.code'|trans }}</th>
+                <th class="col-sm-7">{{ 'label.translation_values'|trans }}</th>
+                {#{% for locale in locales %}#}
+                {#<th>{{ locale }}</th>#}
+                {#{% endfor %}#}
+                {#<th class="col-sm-1">{{ 'label.actions'|trans }}</th>#}
             </tr>
         </thead>
         <tbody>
             {% for item in translations %}
                 <tr data-id="{{ item.id }}" data-domain="{{ item.domain }}" data-local-edit="{{ item.localEditions }}"
-                        {%- if not item.active %}class="text-muted"{% endif %}>
+                    {%- if not item.active %}class="text-muted"{% endif %}>
                     <td>
                         <small class="text-{{ item.active ? (item.conflicts ? 'danger' : item.localEditions ? 'success' : 'muted') : 'muted' }}">{{ item.domain }}</small>
                     </td>
@@ -65,21 +91,32 @@
                                title="{{ item.active ? (item.conflicts ? 'label.sync_conflict'|trans : (item.localEditions ? 'label.changes_for_upload'|trans : 'label.no_changes_for_upload'|trans)) : 'label.status_unused'|trans }}">
                             <strong class="code-text">{{ item.code }}</strong>
                         </small>
+                        <div>
+                            {% if item.active %}
+                                <a href="#" class="edit-translation btn btn-default btn-xs">
+                                    <span aria-hidden="true" class="glyphicon glyphicon-edit"></span>
+                                </a>
+                            {% endif %}
+                        </div>
                     </td>
-                    {% for locale in locales %}
-                        <td class="value-content data-{{ locale }}">{{ item.values[locale].value|default }}</td>
-                    {% endfor %}
-                    <td class="text-center" style="vertical-align: middle">
-                        {% if item.active %}
-                            <a href="#" class="edit-translation btn btn-default btn-xs">
-                                <span aria-hidden="true" class="glyphicon glyphicon-edit"></span>
-                            </a>
-                        {% endif %}
+                    <td>
+                        <table class="table table-condensed">
+                            {% for locale in locales %}
+                                <tr>
+                                    <th style="width: 10%">{{ locale }}</th>
+                                    <td>
+                                        <pre class="value-content data-{{ locale }}">{{ item.values[locale].value|default }}</pre>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </table>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+
+    {{ pagination_content }}
 
     {{ include('@ManuelTranslation/Default/translation_form.html.twig') }}
 {% endblock %}
@@ -87,110 +124,109 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
-        $(function () {
-                    var $modal = $('#translation-form-modal');
-                    var $form = $modal.find('form');
-                    var save_path_new = '{{ path('manuel_translation_save_translation_new') }}';
-                    var save_path_update = '{{ path('manuel_translation_save_translation', {id: '_ID_'}) }}';
-                    var $currentItem = null;
-                    var $formErrorsContainer = $("#form-errors");
+        $(document).ready(function () {
+            var $modal = $('#translation-form-modal');
+            var $form = $modal.find('form');
+            var save_path_new = '{{ path('manuel_translation_save_translation_new') }}';
+            var save_path_update = '{{ path('manuel_translation_save_translation', {id: '_ID_'}) }}';
+            var $currentItem = null;
+            var $formErrorsContainer = $("#form-errors");
 
-                    var $buttonAdd = $("#add-translation");
+            var $buttonAdd = $("#add-translation");
 
-                    $buttonAdd.on('click', function (e) {
-                        e.preventDefault();
-                        $modal.modal('show');
-                        $currentItem = null;
-                        updateForm({});
-                    });
+            $buttonAdd.on('click', function (e) {
+                e.preventDefault();
+                $modal.modal('show');
+                $currentItem = null;
+                updateForm({});
+            });
 
-                    $form.on('submit', function (e) {
-                        e.preventDefault();
-                        var path = $currentItem ?
-                                save_path_update.replace(/_ID_/, $currentItem.data('id')) :
-                                save_path_new;
-                        $.post(path, $form.serializeArray(), function (res) {
-                            if (res === 'Ok') {
-                                if (!$currentItem) {
-                                    window.location.reload();
-                                }
-                                $currentItem.data('local-edit', $currentItem.data('local-edit') + 1);
-                                updateListFromForm($currentItem);
-                                $modal.modal('hide');
-                            } else {
-                                //errores en el formulario
-                                $formErrorsContainer.html(res);
-                            }
-                        });
-                    });
+            $form.on('submit', function (e) {
+                e.preventDefault();
+                var path = $currentItem ?
+                        save_path_update.replace(/_ID_/, $currentItem.data('id')) :
+                        save_path_new;
+                $.post(path, $form.serializeArray(), function (res) {
+                    if (res === 'Ok') {
+                        if (!$currentItem) {
+                            window.location.reload();
+                        }
+                        $currentItem.data('local-edit', $currentItem.data('local-edit') + 1);
+                        updateListFromForm($currentItem);
+                        $modal.modal('hide');
+                    } else {
+                        //errores en el formulario
+                        $formErrorsContainer.html(res);
+                    }
+                });
+            });
 
-                    $modal.on('show.bs.modal', function () {
+            $modal.on('show.bs.modal', function () {
 //                        updateFormFromList($currentItem);
-                        $formErrorsContainer.html('');
-                        $(".existen-domains :radio").attr('checked', false);
-                    });
+                $formErrorsContainer.html('');
+                $(".existen-domains :radio").attr('checked', false);
+            });
 
-                    $('.translation-list').on('click', '.edit-translation', function (e) {
-                        e.preventDefault();
-                        updateFormFromList($currentItem = $(this).closest('tr'));
-                        $modal.modal('show');
-                    });
+            $('.edit-translation').on('click', function (e) {
+                e.preventDefault();
+                updateFormFromList($currentItem = $(this).closest('tr'));
+                $modal.modal('show');
+            });
 
-                    function getValuesFromList($tr) {
-                        return {
-                            new: false,
-                            code: $tr.find('.code-text').html().trim(),
-                            domain: $tr.data('domain').trim(),
-                            localEdit: $tr.data('local-edit'),
-                            values: {
-                                {% for locale, item in form.values -%}
-                                '{{ locale }}': $tr.find('.value-content.data-{{ locale }}').html().trim(),
-                                {% endfor %}
-                            }
-                        };
-                    }
-
-                    function updateListFromForm($tr) {
-                        if ($tr) {
-                            {#$("#{{ form.code.vars.id }}").val($("#{{ form.code.vars.id }}").val());#}
-                            {#$tr.data('domain', $("#{{ form.domain.vars.id }}").val());#}
-                            {% for locale, item in form.values -%}
-                            $tr.find(".value-content.data-{{ locale }}").html($("#{{ item.value.vars.id }}").val());
-                            {% endfor %}
-                        }
-                    }
-
-                    function updateFormFromList($tr) {
-                        if ($tr) {
-                            var data = getValuesFromList($tr);
-                            updateForm(data);
-                        }
-                    }
-
-                    function updateForm(data) {
-
-                        if (!_.isUndefined(data.code)) {
-                            $(".disable-edit").attr('disabled', 'desabled');
-                        } else {
-                            $(".disable-edit").attr('disabled', false);
-                        }
-
-                        $("#{{ form.code.vars.id }}").val(_.isUndefined(data.code) ? null : data.code);
-                        $("#{{ form.domain.vars.id }}").val(_.isUndefined(data.domain) ? 'messages' : data.domain);
-                        $("#{{ form.localEditions.vars.id }}").val(_.isUndefined(data.localEdit) ? 0 : data.localEdit);
+            function getValuesFromList($tr) {
+                return {
+                    new: false,
+                    code: $tr.find('.code-text').html().trim(),
+                    domain: $tr.data('domain').trim(),
+                    localEdit: $tr.data('local-edit'),
+                    values: {
                         {% for locale, item in form.values -%}
-                        if (!_.isUndefined(data.values) && !_.isUndefined(data.values['{{ locale}}'])) {
-                            $("#{{ item.value.vars.id }}").val(data.values['{{ locale}}']);
-                        } else {
-                            $("#{{ item.value.vars.id }}").val('');
-                        }
+                        '{{ locale }}': $tr.find('.value-content.data-{{ locale }}').html().trim(),
                         {% endfor %}
                     }
+                };
+            }
 
-                    $(".existen-domains :radio").on('click', function (e) {
-                        $("#{{ form.domain.vars.id }}").val($(this).val());
-                    });
+            function updateListFromForm($tr) {
+                if ($tr) {
+                    {#$("#{{ form.code.vars.id }}").val($("#{{ form.code.vars.id }}").val());#}
+                    {#$tr.data('domain', $("#{{ form.domain.vars.id }}").val());#}
+                    {% for locale, item in form.values -%}
+                    $tr.find(".value-content.data-{{ locale }}").html($("#{{ item.value.vars.id }}").val());
+                    {% endfor %}
                 }
-        );
+            }
+
+            function updateFormFromList($tr) {
+                if ($tr) {
+                    var data = getValuesFromList($tr);
+                    updateForm(data);
+                }
+            }
+
+            function updateForm(data) {
+
+                if (!_.isUndefined(data.code)) {
+                    $(".disable-edit").attr('disabled', 'desabled');
+                } else {
+                    $(".disable-edit").attr('disabled', false);
+                }
+
+                $("#{{ form.code.vars.id }}").val(_.isUndefined(data.code) ? null : data.code);
+                $("#{{ form.domain.vars.id }}").val(_.isUndefined(data.domain) ? 'messages' : data.domain);
+                $("#{{ form.localEditions.vars.id }}").val(_.isUndefined(data.localEdit) ? 0 : data.localEdit);
+                {% for locale, item in form.values -%}
+                if (!_.isUndefined(data.values) && !_.isUndefined(data.values['{{ locale}}'])) {
+                    $("#{{ item.value.vars.id }}").val(data.values['{{ locale}}']);
+                } else {
+                    $("#{{ item.value.vars.id }}").val('');
+                }
+                {% endfor %}
+            }
+
+            $(".existen-domains :radio").on('click', function (e) {
+                $("#{{ form.domain.vars.id }}").val($(this).val());
+            });
+        });
     </script>
 {% endblock %}
