--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -58,7 +58,7 @@
 
 {% set pagination_content %}
 <div class="text-right">
-    {{ knp_pagination_render(translations) }}
+    {{ knp_pagination_render(translations, 'KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig') }}
 </div>
 {% endset %}
 
@@ -70,9 +70,9 @@
     <table class="table table-striped table-bordered table-hover translation-list">
         <thead>
             <tr>
-                <th class="col-sm-1">{{ 'label.domain'|trans }}</th>
+                {#<th class="col-sm-1"></th>#}
                 <th class="col-sm-3">{{ 'label.code'|trans }}</th>
-                <th class="col-sm-7">{{ 'label.translation_values'|trans }}</th>
+                <th class="col-sm-9">{{ 'label.translation_values'|trans }}</th>
                 {#{% for locale in locales %}#}
                 {#<th>{{ locale }}</th>#}
                 {#{% endfor %}#}
@@ -84,14 +84,16 @@
                 <tr data-id="{{ item.id }}" data-domain="{{ item.domain }}" data-local-edit="{{ item.localEditions }}"
                     {%- if not item.active %}class="text-muted"{% endif %}>
                     <td>
-                        <small class="text-{{ item.active ? (item.conflicts ? 'danger' : item.localEditions ? 'success' : 'muted') : 'muted' }}">{{ item.domain }}</small>
-                    </td>
-                    <td>
-                        <small data-toggle="tooltip" data-placement="top"
-                               title="{{ item.active ? (item.conflicts ? 'label.sync_conflict'|trans : (item.localEditions ? 'label.changes_for_upload'|trans : 'label.no_changes_for_upload'|trans)) : 'label.status_unused'|trans }}">
-                            <strong class="code-text">{{ item.code }}</strong>
-                        </small>
                         <div>
+                            <small data-toggle="tooltip" data-placement="top"
+                                   title="{{ item.active ? (item.conflicts ? 'label.sync_conflict'|trans : (item.localEditions ? 'label.changes_for_upload'|trans : 'label.no_changes_for_upload'|trans)) : 'label.status_unused'|trans }}">
+                                <strong class="code-text">{{ item.code }}</strong>
+                            </small>
+                        </div>
+                        <div>
+                            <small class="text-{{ item.active ? (item.conflicts ? 'danger' : item.localEditions ? 'success' : 'muted') : 'muted' }}">{{ item.domain }}</small>
+                        {#</div>#}
+                        {#<div>#}
                             {% if item.active %}
                                 <a href="#" class="edit-translation btn btn-default btn-xs">
                                     <span aria-hidden="true" class="glyphicon glyphicon-edit"></span>
