--- a/Resources/views/header.html.twig
+++ b/Resources/views/header.html.twig
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Translation Bundle</a>
+            <a class="navbar-brand" href="{{ path('manuel_translation_list') }}">Translation Bundle</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             {#<form class="navbar-form navbar-left" action="{{ path('manuel_translation_list') }}" method="get">#}
