--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -31,26 +31,28 @@
             <span aria-hidden="true" class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right" role="menu">
-            <li>
-                <a href="{{ path('manuel_translation_synchronize_up') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
-                    {{ 'label.upload_translations'|trans }}
-                </a>
-            </li>
-            <li>
-                <a href="{{ path('manuel_translation_synchronize_down') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-download"></span>
-                    {{ 'label.download_translations'|trans }}
-                </a>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <a href="{{ path('manuel_translation_show_conflicts') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-eye-open"></span>
-                    {{ 'label.show_conflicts'|trans }}
-                </a>
-            </li>
-            <li class="divider"></li>
+            {% if enable_sync %}
+                <li>
+                    <a href="{{ path('manuel_translation_synchronize_up') }}">
+                        <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
+                        {{ 'label.upload_translations'|trans }}
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('manuel_translation_synchronize_down') }}">
+                        <span aria-hidden="true" class="glyphicon glyphicon-download"></span>
+                        {{ 'label.download_translations'|trans }}
+                    </a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <a href="{{ path('manuel_translation_show_conflicts') }}">
+                        <span aria-hidden="true" class="glyphicon glyphicon-eye-open"></span>
+                        {{ 'label.show_conflicts'|trans }}
+                    </a>
+                </li>
+                <li class="divider"></li>
+            {% endif %}
             <li><a href="{{ path('manuel_translation_transfer_files_to_bd') }}">
                     <span aria-hidden="true" class="glyphicon glyphicon-refresh"></span>
                     {{ 'label.load_trans_in_bd'|trans }}
