--- a/Resources/views/translations_filter.html.twig
+++ b/Resources/views/translations_filter.html.twig
@@ -26,6 +26,8 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         {{ form_row(form_filter.conflicts) }}
                         &nbsp;&nbsp;&nbsp;&nbsp;
+                        {{ form_row(form_filter.inactive) }}
+                        &nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
                 </div>
             </div>
