--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -7,6 +7,10 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
         <link href="{{ asset('bundles/manueltranslation/css/lumen_bootstrap.min.css') }}" rel="stylesheet">
+        <style>
+            .trans-files, .trans-files h6 { line-height: 18px; color: #aaa }
+            pre { white-space: pre-wrap; }
+        </style>
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
 </head>
