--- a/Resources/views/Default/translation_form.html.twig
+++ b/Resources/views/Default/translation_form.html.twig
@@ -26,8 +26,8 @@
                         </div>
                     </div>
                 </div>
-                {% for locale, value in form.values %}
-                    {{ form_row(value.value, {label:locale|title}) }}
+                {% for locale, child in form.values %}
+                    {{ form_row(child, {label:locale|title}) }}
                 {% endfor %}
             </div>
             <div class="modal-footer">
