--- a/Resources/views/_pagination.html.twig
+++ b/Resources/views/_pagination.html.twig
@@ -9,7 +9,7 @@
     {% set start = start < 1 ? 1 : start %}
     {% set end = start %}
 
-    <ul class="pagination">
+    <ul class="pagination pagination-sm" style="margin: 6px;">
 
         {% if paginator.hasPreviousPage %}
             <li>
