Dando el foco al primer campo editable del modal
La idea es que al crear o editar una etiqueta de traducción,
aparesca de una vez un campo seleccionado para comenzar a
escribir

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -227,6 +227,8 @@
 //                        updateFormFromList($currentItem);
                 $formErrorsContainer.html('');
                 $(".existen-domains :radio").attr('checked', false);
+            }).on('shown.bs.modal', function () {
+                $(this).find(':input:not(:disabled,:button):first').focus();
             });
 
             $('.edit-translation').on('click', function (e) {
