Mejorada la edición de traducciones
Ahora siempre se lanza un ajax para mostrar el formulario.
Al guardarlo el submit es por ajax, y si hay errores el
modal se actualiza con el html devuelto por ajax.

Cuando se guarda una traducción existente, la fila de traducción
se actualiza.

--- a/Resources/views/Default/translation_form.html.twig
+++ b/Resources/views/Default/translation_form.html.twig
@@ -29,6 +29,7 @@
                 {% for locale, child in form.values %}
                     {{ form_row(child, {label:locale|title}) }}
                 {% endfor %}
+                {{ form_rest(form) }}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
