--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -21,9 +21,9 @@
 {% block page_header %}{{ 'label.translation_list'|trans }}{% endblock %}
 
 {% block page_header_rigth %}
-    <button type="button" class="btn btn-primary" id="add-translation">
+    <a href="{{ path('manuel_translation_form') }}" class="btn btn-primary" id="add-translation">
         <span aria-hidden="true" class="glyphicon glyphicon-plus"></span> {{ 'label.add'|trans }}
-    </button>
+    </a>
     <div class="btn-group">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <span aria-hidden="true" class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
@@ -104,76 +104,7 @@
         </thead>
         <tbody>
             {% for item in translations %}
-                <tr data-id="{{ item.id }}" data-domain="{{ item.domain }}" data-local-edit="{{ item.localEditions }}"
-                    {%- if not item.active %}class="text-muted"{% endif %}>
-                    <td>
-                        <div class="row-fluid clearfix">
-                            <div class="col-sm-8">
-                                <small data-toggle="tooltip" data-placement="top"
-                                       title="{{ item.active ? (item.conflicts ? 'label.sync_conflict'|trans : (item.isChanged ? 'label.changes_for_upload'|trans : 'label.no_changes_for_upload'|trans)) : 'label.status_unused'|trans }}">
-                                    <strong class="code-text text-{{ item.active ? (item.conflicts ? 'danger' : item.isChanged ? 'success' : 'muted') : 'muted' }}">{{ item.code }}</strong>
-                                </small>
-                            </div>
-                            <div class="col-sm-4 text-right">
-                                <small class="">{{ item.domain }}</small>
-                            </div>
-                        </div>
-                        <div class="row-fluid clearfix">
-                            <div class="col-sm-12 text-right">
-                                {% if item.active %}
-                                    <a href="#" class="edit-translation btn btn-primary btn-xs">
-                                        <span aria-hidden="true" class="glyphicon glyphicon-edit"></span> {{ 'label.edit'|trans }}
-                                    </a>
-                                {% endif %}
-                                <a href="{{ path('manuel_translation_log_list', {id:item.id}) }}"
-                                   class="btn btn-default btn-xs">
-                                    <span aria-hidden="true" class="glyphicon glyphicon-zoom-in"></span> {{ 'label.reviews'|trans }}
-                                </a>
-                                {% if item.active %}
-                                    <a href="{{ path('manuel_translation_change_status', {id : item.id, status: 'inactive'}) }}"
-                                       class="btn btn-warning btn-xs">
-                                        <span aria-hidden="true" class="glyphicon glyphicon-ban-circle"></span> {{ 'label.active'|trans }}
-                                    </a>
-                                {% else %}
-                                    <a href="{{ path('manuel_translation_change_status', {id : item.id, status: 'active'}) }}"
-                                       class="btn btn-info btn-xs">
-                                        <span aria-hidden="true" class="glyphicon glyphicon-ok-circle"></span> {{ 'label.inactive'|trans }}
-                                    </a>
-                                {% endif %}
-                            </div>
-                        </div>
-                        {#<hr/>#}
-                        <div class="trans-files">
-                            <h6>{{ 'label.used_in'|trans }}</h6>
-                            <ul>
-                                {% for file in item.files %}
-                                    <li>
-                                        <small>{{ file }}</small>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </td>
-                    <td>
-                        {% for locale in locales %}
-                            <pre class="value-content data-{{ locale }}">{{ item.values[locale]|default }}</pre>
-                        {% endfor %}
-                        <table class="table table-condensed table-bordered" style="margin-bottom: 0px">
-                            <tr>
-                                <th class="text-right">{{ 'label.version'|trans }}</th>
-                                <td>{{ item.version }}</td>
-                                <th class="text-right">{{ 'label.with_changes'|trans }}</th>
-                                <td>{{ (item.isChanged ? 'label.yes' : 'label.no')|trans }}</td>
-                                <th class="text-right">{{ 'label.autogenerated'|trans }}</th>
-                                <td>{{ (item.autogenerated ? 'label.yes' : 'label.no')|trans }}</td>
-                                <th class="text-right">{{ 'label.active'|trans }}</th>
-                                <td>{{ (item.active ? 'label.yes' : 'label.no')|trans }}</td>
-                            </tr>
-                        </table>
-                        {#</div>#}
-                        {#</div>#}
-                    </td>
-                </tr>
+                {{ include('@ManuelTranslation/Translation/_row.html.twig', {translation: item}) }}
             {% endfor %}
         </tbody>
     </table>
@@ -189,106 +120,49 @@
         $(document).ready(function () {
             var $modal = $('#translation-form-modal');
             var $form = $modal.find('form');
-            var save_path_new = '{{ path('manuel_translation_save_translation_new') }}';
-            var save_path_update = '{{ path('manuel_translation_save_translation', {id: '_ID_'}) }}';
-            var $currentItem = null;
-            var $formErrorsContainer = $("#form-errors");
-
+            var $currentRow = null;
             var $buttonAdd = $("#add-translation");
 
             $buttonAdd.on('click', function (e) {
                 e.preventDefault();
-                $modal.modal('show');
-                $currentItem = null;
-                updateForm({});
+                $currentRow = null;
+                $form.attr('action', this.href).attr('novalidate', 'novalidate');
+                $modal.find('.modal-body').load(this.href + ' .form-content', function () {
+                    $modal.modal('show');
+                });
             });
 
             $form.on('submit', function (e) {
                 e.preventDefault();
-                var path = $currentItem ?
-                        save_path_update.replace(/_ID_/, $currentItem.data('id')) :
-                        save_path_new;
-                $.post(path, $form.serializeArray(), function (res) {
-                    if (res === 'Ok') {
-                        if (!$currentItem) {
-                            window.location.reload();
-                        }
-                        $currentItem.data('local-edit', $currentItem.data('local-edit') + 1);
-                        updateListFromForm($currentItem);
+                $.post(this.action, $form.serializeArray(), function (res, status, request) {
+                    $form.find('.form-content').replaceWith($(res).find('.form-content'));
+                    if (request.getResponseHeader('saved')) {
                         $modal.modal('hide');
-                    } else {
-                        //errores en el formulario
-                        $formErrorsContainer.html(res);
+                        if ($currentRow) {
+                            $.get($currentRow.data('refresh-url'), function (tr) {
+                                $currentRow.replaceWith(tr);
+                            })
+                        }
                     }
                 });
             });
 
             $modal.on('show.bs.modal', function () {
-//                        updateFormFromList($currentItem);
-                $formErrorsContainer.html('');
                 $(".existen-domains :radio").attr('checked', false);
             }).on('shown.bs.modal', function () {
                 $(this).find(':input:not(:disabled,:button):first').focus();
             });
 
-            $('.edit-translation').on('click', function (e) {
+            $('.translation-list').on('click', '.edit-translation', function (e) {
                 e.preventDefault();
-                updateFormFromList($currentItem = $(this).closest('tr'));
-                $modal.modal('show');
+                $currentRow = $(this).closest('tr');
+                $form.attr('action', this.href);
+                $modal.find('.modal-body').load(this.href + ' .form-content', function () {
+                    $modal.modal('show');
+                });
             });
 
-            function getValuesFromList($tr) {
-                return {
-                    new: false,
-                    code: $tr.find('.code-text').html().trim(),
-                    domain: $tr.data('domain').trim(),
-                    localEdit: $tr.data('local-edit'),
-                    values: {
-                        {% for locale, item in form.values -%}
-                        '{{ locale }}': $tr.find('.value-content.data-{{ locale }}').html().trim(),
-                        {% endfor %}
-                    }
-                };
-            }
-
-            function updateListFromForm($tr) {
-                if ($tr) {
-                    {#$("#{{ form.code.vars.id }}").val($("#{{ form.code.vars.id }}").val());#}
-                    {#$tr.data('domain', $("#{{ form.domain.vars.id }}").val());#}
-                    {% for locale, item in form.values -%}
-                    $tr.find(".value-content.data-{{ locale }}").html($("#{{ item.vars.id }}").val());
-                    {% endfor %}
-                }
-            }
-
-            function updateFormFromList($tr) {
-                if ($tr) {
-                    var data = getValuesFromList($tr);
-                    updateForm(data);
-                }
-            }
-
-            function updateForm(data) {
-
-                if (!_.isUndefined(data.code)) {
-                    $(".disable-edit").attr('disabled', 'desabled');
-                } else {
-                    $(".disable-edit").attr('disabled', false);
-                }
-
-                $("#{{ form.code.vars.id }}").val(_.isUndefined(data.code) ? null : data.code);
-                $("#{{ form.domain.vars.id }}").val(_.isUndefined(data.domain) ? 'messages' : data.domain);
-                $("#{{ form.localEditions.vars.id }}").val(_.isUndefined(data.localEdit) ? 0 : data.localEdit);
-                {% for locale, item in form.values -%}
-                if (!_.isUndefined(data.values) && !_.isUndefined(data.values['{{ locale}}'])) {
-                    $("#{{ item.vars.id }}").val(data.values['{{ locale}}']);
-                } else {
-                    $("#{{ item.vars.id }}").val('');
-                }
-                {% endfor %}
-            }
-
-            $(".existen-domains :radio").on('click', function (e) {
+            $form.on('click', ".existen-domains :radio", function (e) {
                 $("#{{ form.domain.vars.id }}").val($(this).val());
             });
         });
