--- a/Resources/views/header.html.twig
+++ b/Resources/views/header.html.twig
@@ -16,19 +16,19 @@
             {#<ul class="nav navbar-nav">#}
                 {#<li><a href="{{ path('manuel_translation_list') }}">Clear</a></li>#}
             {#</ul>#}
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
+            {#<ul class="nav navbar-nav navbar-right">#}
+                {#<li><a href="#">Link</a></li>#}
+                {#<li class="dropdown">#}
+                    {#<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>#}
+                    {#<ul class="dropdown-menu">#}
+                        {#<li><a href="#">Action</a></li>#}
+                        {#<li><a href="#">Another action</a></li>#}
+                        {#<li><a href="#">Something else here</a></li>#}
+                        {#<li class="divider"></li>#}
+                        {#<li><a href="#">Separated link</a></li>#}
+                    {#</ul>#}
+                {#</li>#}
+            {#</ul>#}
         </div>
     </div>
 </div>
