--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -29,6 +29,18 @@
             <span aria-hidden="true" class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right" role="menu">
+            <li>
+                <a href="{{ path('manuel_translation_generate_file') }}">
+                    <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
+                    {{ 'label.update_file'|trans }}
+                </a>
+            </li>
+            <li>
+                <a href="{{ path('manuel_translation_load_from_file') }}">
+                    <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
+                    {{ 'label.load_from_file'|trans }}
+                </a>
+            </li>
             {% if enable_sync %}
                 <li>
                     <a href="{{ path('manuel_translation_synchronize_up') }}">
