--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -31,70 +31,45 @@
         <ul class="dropdown-menu dropdown-menu-right" role="menu">
             <li>
                 <a href="{{ path('manuel_translation_generate_file') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
+                    <span aria-hidden="true" class="glyphicon glyphicon-indent-right"></span>
                     {{ 'label.update_file'|trans }}
                 </a>
             </li>
             <li>
                 <a href="{{ path('manuel_translation_load_from_file') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
+                    <span aria-hidden="true" class="glyphicon glyphicon-random"></span>
                     {{ 'label.load_from_file'|trans }}
                 </a>
             </li>
-            {% if enable_sync %}
-                <li>
-                    <a href="{{ path('manuel_translation_synchronize_up') }}">
-                        <span aria-hidden="true" class="glyphicon glyphicon-upload"></span>
-                        {{ 'label.upload_translations'|trans }}
-                    </a>
-                </li>
-                <li>
-                    <a href="{{ path('manuel_translation_synchronize_down') }}">
-                        <span aria-hidden="true" class="glyphicon glyphicon-download"></span>
-                        {{ 'label.download_translations'|trans }}
-                    </a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                    <a href="{{ path('manuel_translation_show_conflicts') }}">
-                        <span aria-hidden="true" class="glyphicon glyphicon-eye-open"></span>
-                        {{ 'label.show_conflicts'|trans }}
-                    </a>
-                </li>
-                <li class="divider"></li>
-            {% endif %}
-            <li><a href="{{ path('manuel_translation_transfer_files_to_bd') }}">
+            <li>
+                <a href="{{ path('manuel_translation_transfer_files_to_bd') }}">
                     <span aria-hidden="true" class="glyphicon glyphicon-refresh"></span>
                     {{ 'label.load_trans_in_bd'|trans }}
-                </a></li>
-            <li><a href="{{ path('manuel_translation_inactive_unused') }}">
+                </a>
+            </li>
+            <li>
+                <a href="{{ path('manuel_translation_inactive_unused') }}">
                     <span aria-hidden="true" class="glyphicon glyphicon-refresh"></span>
                     {{ 'label.inactive_unused_trans'|trans }}
                 </a></li>
-            <li class="divider"></li>
-            <li><a href="{{ path('manuel_translation_generate_backup') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-tasks"></span>
-                    {{ 'label.generate_backup'|trans }}
-                </a></li>
-            <li><a href="{{ path('manuel_translation_backup_list') }}">
-                    <span aria-hidden="true" class="glyphicon glyphicon-floppy-open"></span>
-                    {{ 'label.restore_backup'|trans }}
-                </a></li>
+            <li class="divider">
+
+            </li>
         </ul>
     </div>
 {% endblock %}
 
 {% set pagination_content %}
-<div class="row">
-    <div class="col-sm-3">
-        <h4>
-            <b>{{ translations.nbResults }}</b> {{ 'label.items'|trans }}
-        </h4>
+    <div class="row">
+        <div class="col-sm-3">
+            <h4>
+                <b>{{ translations.nbResults }}</b> {{ 'label.items'|trans }}
+            </h4>
+        </div>
+        <div class="col-sm-9 text-right">
+            {{ include('@ManuelTranslation/_pagination.html.twig', {paginator: translations}) }}
+        </div>
     </div>
-    <div class="col-sm-9 text-right">
-        {{ include('@ManuelTranslation/_pagination.html.twig', {paginator: translations}) }}
-    </div>
-</div>
 {% endset %}
 
 {% block content %}
@@ -146,13 +121,15 @@
 
             $form.on('submit', function (e) {
                 e.preventDefault();
+                $form.find(':submit').button('loading');
                 $.post(this.action, $form.serializeArray(), function (res, status, request) {
                     $form.find('.form-content').replaceWith($(res).find('.form-content'));
                     if (request.getResponseHeader('saved')) {
-                        $modal.modal('hide');
                         if ($currentRow) {
                             $.get($currentRow.data('refresh-url'), function (tr) {
                                 $currentRow.replaceWith(tr);
+                                $modal.modal('hide');
+                                $form.find(':submit').button('reset');
                             })
                         }
                     }
