colocando un nombre correcto para la columna de conflictos

--- a/Resources/views/Sync/resolve_conflicts.html.twig
+++ b/Resources/views/Sync/resolve_conflicts.html.twig
@@ -33,7 +33,7 @@
             <table class="table table-bordered table-striped table-hover translation-list">
                 <thead>
                     <tr>
-                        <th class="col-sm-6">{{ 'label.local_values'|trans }}</th>
+                        <th class="col-sm-6">{{ 'label.file_values'|trans }}</th>
                         <th class="col-sm-6">{{ 'label.database_values'|trans }}</th>
                     </tr>
                 </thead>
