--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
 
         <div class="page-header">
             <div class="pull-right">
-                {% block page_header_rigth %}{% endblock %}
+                {% block page_header_right %}{% endblock %}
             </div>
             <h1>{% block page_header %}{% endblock %}</h1>
         </div>
